--- a/main.html
+++ b/main.html
@@ -17,7 +17,8 @@
         <span>l</span>
         <span>a</span>
         <span> </span>
-        <span>DAYI</span>
+        &nbsp;
+        <span>ADAMARIS</span>
     </div>
     <div class="description">
         <span>Espero estes teniendo un bonito fin de semana 💖😊</span>
@@ -26,11 +27,6 @@
         <button class="botones">
             <a href="flower.html" style="color: #fff;">¡Un Regalo para ti en este 21/09/2024!</a>
         </button>
-    </div>
-
-    <!-- Créditos -->
-    <div class="credits">
-        <p>Felicidades por pasar a cuarto 🥳</p>
     </div>
 </body>
 
